salesforce/force-app/main/default/objects/WFC27_Queue__c/WFC27_Queue__c.object-meta.xml
<CustomObject><deploymentStatus>Deployed</deploymentStatus><label>WFC27 Queue Item</label><nameField><displayFormat>QUEUE-{000000}</displayFormat><label>Queue Item Number</label><type>AutoNumber</type></nameField><pluralLabel>WFC27 Queue Items</pluralLabel><sharingModel>ReadWrite</sharingModel></CustomObject>