salesforce/force-app/main/default/objects/WFC27_Queue__c/fields/Kind__c.field-meta.xml
<CustomField><fullName>Kind__c</fullName><label>Kind</label><length>20</length><type>Text</type></CustomField>