salesforce/force-app/main/default/objects/WFC27_Queue__c/fields/Packet__c.field-meta.xml
<CustomField><fullName>Packet__c</fullName><label>Packet</label><referenceTo>WFC27_Packet__c</referenceTo><relationshipLabel>Packet</relationshipLabel><relationshipName>Packet</relationshipName><type>Lookup</type></CustomField>