salesforce/force-app/main/default/objects/WFC27_Queue__c/fields/Source_Modified_At__c.field-meta.xml
<CustomField><fullName>Source_Modified_At__c</fullName><label>Source Modified At</label><type>DateTime</type></CustomField>